# testing-workshop

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-test.yaml  deploy-site.yaml  lint-test.yaml
cassettes/: intensity.yaml
docs/: index.md
docs/examples/: optimisation.md  simple_peaker.md
docs/stylesheets/: extra.css
tests/: test_fibonacci.py  test_fixture.py  test_intensity.py  test_mark.py  test_parametrisation.py  test_raises.py  test_tempfile.py  test_unittest.py
